added seats
