# packages/platform/types/event-types/event-types_2024_06_14/inputs/create-event-type.input.ts
@@ -28,6 +28,7 @@ import { ValidateLocations_2024_06_14 } from "./locations.input";
 import type { Location_2024_06_14 } from "./locations.input";
 import { Recurrence_2024_06_14 } from "./recurrence.input";
 import { RequiresConfirmation_2024_06_14, ValidateRequiresConfirmation } from "./requires-confirmation.input";
+import { Seats_2024_06_14 } from "./seats.input";
 
 export const CREATE_EVENT_LENGTH_EXAMPLE = 60;
 export const CREATE_EVENT_TITLE_EXAMPLE = "Learn the secrets of masterchief!";
@@ -136,6 +137,10 @@ export class CreateEventTypeInput_2024_06_14 {
   @IsOptional()
   @Type(() => EventTypeColor_2024_06_14)
   eventTypeColor?: EventTypeColor_2024_06_14;
+
+  @IsOptional()
+  @Type(() => Seats_2024_06_14)
+  seats?: Seats_2024_06_14;
 }
 
 export enum HostPriority {
